# dev-quick-init

./: .gitignore  LICENSE  README.md  pyproject.toml
dev_quick_init/: installer.py  samples.py
examples/: full.yml  mac.yml  mac_iterate.yml  simple.yml  ubuntu.yml
quick_setup/: installer.py
