[project]
name = "quick-setup"
version = "0.1.0"
description = "Quick developer machine setup from YAML"
authors = [
    { name="Your Name", email="you@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pyyaml",
    "click"
]

[project.scripts]
quick-setup = "quick_setup.installer:main"

[tool.uv]
package = true